# blog-follow-along-rust-codegen

./: Cargo.toml  README.md  SECURITY.md
codegen/: Cargo.toml
codegen/src/: lib.rs
example/: Cargo.toml  build.rs
example/assets/: index.html
example/assets/scripts/: dashboard-f0e9d8.js  loader-a1b2c3.js
example/src/: main.rs
src/: lib.rs
