[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asset-bundler = { version = "0.1.0", path = ".." }

[build-dependencies]
asset-bundler-codegen = { version = "0.1.0", path = "../codegen" }
